# LazyPassword

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 4387e37388b9_drop_kdf_salt_from_users.py  eb95ffda6e15_create_users_and_vault_items.py
app/: main.py
app/core/: config.py  database.py  deps.py  security.py
app/models/: __init__.py  user.py  vault_item.py
app/routers/: auth.py  vault.py
app/schemas/: auth.py  vault.py
app/static/css/: style.css
app/static/js/: crypto.js  vault.js
app/templates/: base.html  home.html  login.html  signup.html  vault.html
nginx/: default.conf
