[project]
name = "lazypassword"
version = "0.1.0"
description = "웹 비밀번호 저장소"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "gunicorn>=26.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
